--- a/src/app/shared/components/generic-table/generic-table.component.html
+++ b/src/app/shared/components/generic-table/generic-table.component.html
@@ -83,28 +83,45 @@
                                    [value]="(col.field === 'iccid') ? (item[col.field]) : (col.field === 'active') ? (item[col.field] ? 'ACTIVE' : 'INACTIVE') : (col.field === 'activationStatusText') ? (item[col.field]) : (item[col.field] ? 'INSTOCK' : 'OUTOFSTOCK')"
                                    (click)="col?.showOverlay ? showOverlay(col,item, $event, op) : null" [ngClass]="{'cursor-pointer': col?.showOverlay}" />
                                 <p-overlayPanel #op appendTo="body">
-                                    <div class="flex flex-column gap-1 w-35rem">
+                                    <div class="flex flex-column gap-1 w-30rem">
                                         @if(selectedColumn === 'iccid') {
                                             @if(selectedOverlayObject.simDetails) {
                                         <span class="font-medium text-900 block mb-2">SIM Details</span>
                                         <div class="formgrid grid">
-                                            <div class="field col-12 sm:col-12 md:col-4">
-                                                <p><strong>Provider:</strong> {{ selectedOverlayObject?.simDetails?.provider?.providerName }}</p>
-                                                <p><strong>Primary SIM No:</strong> {{ selectedOverlayObject?.simDetails?.primarySimNo }}</p>
-                                                <p><strong>Primary Operator:</strong> {{ selectedOverlayObject?.simDetails?.primaryOpt }}</p>
+                                            <!-- First Row: Two Columns -->
+                                            <div class="field col-12 sm:col-6">
+                                                <p class="mb-1 font-bold">{{ selectedOverlayObject?.simDetails?.provider?.providerName }}</p>
+                                              <p class="mt-0  text-sm text-color-secondary">Provider</p>
                                             </div>
-                                            <div class="field col-12 sm:col-12 md:col-4">
-                                                <p><strong>Secondary SIM No:</strong> {{ selectedOverlayObject?.simDetails?.secondarySimNo }}</p>
-                                                <p><strong>Secondary Operator:</strong> {{ selectedOverlayObject?.simDetails?.secondaryOpt }}</p>
-                                                <p><strong>Activation On:</strong> {{ selectedOverlayObject?.simDetails?.activationOn | date:'short' }}</p>
+                                            <div class="field col-12 sm:col-6 text-right ">
+                                                <p class="mb-1 font-bold">{{ selectedOverlayObject?.simDetails?.activationOn | date}}</p>
+                                              <p class="mt-0  text-sm text-color-secondary">Activation On:</p>
                                             </div>
-                                            <div class="field col-12 sm:col-12 md:col-4">
-                                                <p><strong>Primary Valid Till:</strong> {{ selectedOverlayObject?.simDetails?.primaryValidTill | date:'short' }}
-                                                </p>
-                                                <p><strong>Secondary Valid Till:</strong> {{ selectedOverlayObject?.simDetails?.secondaryValidTill |
-                                                    date:'short' }}</p>
+                                          
+                                            <!-- Second Row: Three Columns -->
+                                            <div class="field col-12 sm:col-4 text-left">
+                                                <p class="mb-1 font-bold">{{ selectedOverlayObject?.simDetails?.primarySimNo }}</p>
+                                              <p class="mt-0  text-sm text-color-secondary">Primary SIM No:</p>
+                                              <p class="mb-1 font-bold">{{ selectedOverlayObject?.simDetails?.secondarySimNo }}</p>
+                                              <p class="mt-0  text-sm text-color-secondary">Secondary SIM No:</p>
+                                             
                                             </div>
-                                        </div>
+                                            <div class="field col-12 sm:col-4 text-center">
+                                                <p class="mb-1 font-bold">{{ selectedOverlayObject?.simDetails?.primaryOpt }}</p>
+                                                <p class="mt-0  text-sm text-color-secondary">Primary Operator:</p>
+                                                <p class="mb-1 font-bold">{{ selectedOverlayObject?.simDetails?.secondaryOpt }}</p>
+                                              <p class="mt-0  text-sm text-color-secondary">Secondary Operator:</p>
+                                              
+                                             
+                                            </div>
+                                            <div class="field col-12 sm:col-4 text-right">
+                                                <p class="mb-1 font-bold">{{ selectedOverlayObject?.simDetails?.primaryValidTill | date }}</p>
+                                              <p class="mt-0  text-sm text-color-secondary">Primary Valid Till:</p>
+                                              <p class="mb-1 font-bold">{{ selectedOverlayObject?.simDetails?.secondaryValidTill | date }}</p>
+                                              <p class="mt-0  text-sm text-color-secondary">Secondary Valid Till:</p>
+                                            </div>
+                                          </div>
+                                          
                                         } @else {
                                             <p-button (onClick)="onActivate($event, item)" label="Activate Sim" icon="pi pi-eject" />
                                         }
