--- a/src/app/pages/main/dashboard/dashboard.component.html
+++ b/src/app/pages/main/dashboard/dashboard.component.html
@@ -137,7 +137,7 @@
                                     
                                         <!-- Right side: Title and count -->
                                         <div class="flex flex-column justify-content-center align-items-end p-3">
-                                            <span class="text-lg mb-2">{{vehicle.deviceCount}}</span>
+                                            <span class="text-lg mb-2">{{vehicle.deviceCount}} / {{vehicle.totalCount}}</span>
                                             <span class="text-xl font-bold">{{vehicle.categoryName}}</span>
                                         </div>
                                     </div>
