--- a/src/app/shared/components/generic-table/generic-table.component.html
+++ b/src/app/shared/components/generic-table/generic-table.component.html
@@ -102,7 +102,13 @@
                                                 {{ (col.field === 'user' && col.subfield === 'name') ? (item[col.field].userType === 'User') ?  (item[col.field]?.[col.subfield] || '-') : '-'  : ((item.activationStatus && item.inStock) ? 'Click To Create Fitment' : item[col.field]?.[col.subfield] || '-') }}
                                                 </span>
                                         } @else {
-                                            {{ col?.type === 'date' ? ((item[col.field]?.[col.subfield] | date) || '-') : (item[col.field]?.[col.subfield] || '-') }}
+                                            <span [ngClass]="{
+                                                'text-green-500' : col.field === 'lastPosition' && item[col.field]?.[col.subfield] === 'Online',
+                                                'text-red-500' : col.field === 'lastPosition' && item[col.field]?.[col.subfield] === 'Offline',
+                                                'text-color-secondary': col.field === 'lastPosition' && item[col.field]?.[col.subfield] === 'Never Connected'
+                                                }">
+                                                {{ col?.type === 'date' ? ((item[col.field]?.[col.subfield] | date) || '-') : (item[col.field]?.[col.subfield] || '-') }}
+                                            </span>
                                         }
                                         <p-overlayPanel #op appendTo="body">
                                             <div class="flex flex-column w-30rem">
